[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/crt_overlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://night_screen/night_screen.gd" type="Script" id=3]
[ext_resource path="res://ui/fader.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrtOverlay" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -101.0
margin_top = 4.0
margin_right = 101.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "title"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextDayButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -29.0
margin_right = -4.0
margin_bottom = -4.0
text = "ui_next_day"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousScreenButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -29.0
margin_right = 24.0
margin_bottom = -4.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextScreenButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -29.0
margin_right = 45.0
margin_bottom = -4.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fader" parent="." instance=ExtResource( 4 )]

[node name="OrderListContainer" type="ScrollContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 20.0
margin_right = -4.0
margin_bottom = -38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrderList" type="VBoxContainer" parent="OrderListContainer"]
margin_right = 248.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OrderListHeader" type="Label" parent="OrderListContainer/OrderList"]
margin_right = 248.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ui_order_list_header"

[node name="OrderListFooter" type="Label" parent="OrderListContainer/OrderList"]
margin_top = 17.0
margin_right = 248.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ui_order_list_footer"

[node name="StocksListContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 20.0
margin_right = -4.0
margin_bottom = -38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StocksList" type="VBoxContainer" parent="StocksListContainer"]
margin_right = 248.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StocksListHeader" type="Label" parent="StocksListContainer/StocksList"]
margin_right = 248.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ui_stocks_list_header"

[node name="StocksListFooter" type="Label" parent="StocksListContainer/StocksList"]
margin_top = 17.0
margin_right = 248.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ui_stocks_list_footer"

[connection signal="pressed" from="NextDayButton" to="." method="_on_NextDayButton_pressed"]
[connection signal="pressed" from="PreviousScreenButton" to="." method="_on_PreviousScreenButton_pressed"]
[connection signal="pressed" from="NextScreenButton" to="." method="_on_NextScreenButton_pressed"]
